k8s/nginx/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-server
  namespace: default
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
            - containerPort: 443
          volumeMounts:
            - name: nginx-config-volume
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
            - name: tls-certs
              mountPath: /etc/nginx/certs
              readOnly: true
            - name: empty-dir
              mountPath: /etc/nginx/conf.d/
            - name: staticfiles-storage
              mountPath: /vol/web/static
              readOnly: true
            - name: media-storage
              mountPath: /vol/web/media
              readOnly: true
      volumes:
        - name: nginx-config-volume
          configMap:
            name: nginx-config
        - name: tls-certs
          secret:
            secretName: kickb-dev-tls
        - name: empty-dir
          emptyDir: {}
        - name: staticfiles-storage
          persistentVolumeClaim:
            claimName: wagtail-staticfiles
        - name: media-storage
          persistentVolumeClaim:
            claimName: wagtail-media
