k8s/nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wagtail-service
spec:
  selector:
    app: wagtail
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: NodePort
